Fixes: - #1410/#1411 - Import Cleanup AirSuction: - removed BUTTONS and LEVER from target location ignore list as duplicate entries from the transparency list
IceBullet:
- added checkDiagonalWall method to enhance wall detection
- updated transparency check to include diagonal wall checks

WaterArmsSpear:
- added obstruction check to prevent hitting entities that are obstructed

CauldronFix: (Needs to be Reviewed)
- added new isCauldron method to WaterAbility with sourcable boolean parameter, to delineate between sourcable and unsourcable cauldrons
- previously, when abilities were handling updating their sources, empty cauldrons that were sourced (by another player updating the block after sourcing) were deleted
- updated existing isCauldron method to return true for empty cauldrons
- refactored logic to determine if a cauldron can be sourced from based on its level